[project]
name = "tt-tools-common"
requires-python = ">=3.10"
version = "1.4.30"
description = "Common library for Tenstorrent tooling"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name = "Sam Bansal", email = "sbansal@tenstorrent.com" }
]
maintainers = [
  { name = "Sam Bansal", email = "sbansal@tenstorrent.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  'distro>=1.8.0',
  'elasticsearch>=8.11.0',
  'psutil>=5.9.6',
  'pyyaml>=6.0.1',
  'rich>=13.7.0',
  'textual>=0.59.0',
  'requests>=2.32.3',
  'tqdm>=4.66.3',
  'pydantic>=1.2',
]

optional-dependencies.dev = [
  'black>=23.11.0',
  'pre-commit>=3.5.0',
  'pyluwen>=0.7.9',
]

[project.urls]
"Homepage" = "http://tenstorrent.com"
"Bug Reports" = "https://github.com/tenstorrent/tt-tools-common/issues"
"Source" = "https://github.com/tenstorrent/tt-tools-common"


[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
  "*.css",
  "data/*/*.yaml",
  "data/*/*/*.yaml",
]

[tool.setuptools.exclude-package-data]
"*" = [
  'build',
]

[tool.setuptools.packages.find]
where = [ ".", ]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = [
  "setuptools>=43.0.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

# vim: expandtab:ts=2:sw=2:ai
